--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 <body>
     <h1>Uzzal Bhowmik</h1>
     <p>hi I'm trying the Github for the first time and this is me trying to push something into the Github so lets hope for the best!</p>
+
+    <img src="images/sundar pichai.jpg" alt="">
 </body>
 </html>
