--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>My Second Github File</title>
 </head>
 <body>
-    <h1>Uzzal Bhowmik</h1>
+    <h1>Uzzal Bhowmik this is my name!</h1>
     <p>hi I'm trying the Github for the first time and this is me trying to push something into the Github so lets hope for the best!</p>
 
     <img src="images/sundar pichai.jpg" alt="">
