snadella img added

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <p>hi I'm trying the Github for the first time and this is me trying to push something into the Github so lets hope for the best!</p>
 
     <img src="images/sundar pichai.jpg" alt="">
+    <img src="images/satyanadella.jpg" alt="">
+
+    <br>
 
     <strong>this is a test file for testing . If by any accicent this file gets destroyed that wont be that much of a issue.</strong>
 </body>
