snadella img size fixed

--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        #snadella {
+            height: 194.6px;
+            width: 255px;
+        }
+    </style>
     <title>My Second Github File</title>
 </head>
 <body>
@@ -11,7 +17,7 @@
     <p>hi I'm trying the Github for the first time and this is me trying to push something into the Github so lets hope for the best!</p>
 
     <img src="images/sundar pichai.jpg" alt="">
-    <img src="images/satyanadella.jpg" alt="">
+    <img id="snadella" src="images/satyanadella.jpg" alt="">
 
     <br>
 
