--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
             height: 194.6px;
             width: 255px;
         }
+        p{
+            width: 70%;
+        }
     </style>
     <title>My Second Github File</title>
 </head>
@@ -22,5 +25,10 @@
     <br>
 
     <strong>this is a test file for testing . If by any accicent this file gets destroyed that wont be that much of a issue.</strong>
+
+    <br>
+    
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus animi, qui accusamus corporis doloribus deleniti rerum nulla. Debitis sit ad animi voluptate velit quod. Neque quos deserunt beatae suscipit possimus tempora illum dicta aut repellendus vitae, tenetur optio dignissimos eos placeat, adipisci ab quo dolore architecto nobis. Pariatur a, ipsam aperiam vero dignissimos iusto saepe, distinctio quia maiores consequuntur eligendi commodi animi incidunt autem totam recusandae. Quae alias, dolore deserunt voluptates provident numquam cumque laborum eum quo beatae excepturi perspiciatis sint illum quaerat autem aliquid doloremque aspernatur maxime deleniti minima nemo. Et itaque esse quas libero assumenda, tenetur laboriosam magni?Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio voluptatum assumenda, molestias commodi necessitatibus odit, debitis quam aut recusandae minima error obcaecati labore voluptates nihil est repellat facilis accusamus. Aliquid aspernatur quia debitis provident magni architecto neque nobis facilis sint facere? Rerum, distinctio. Quasi dolor incidunt commodi quod sit? Assumenda.</p>
+
 </body>
 </html>
