--- a/index.html
+++ b/index.html
@@ -16,19 +16,18 @@
     <title>My Second Github File</title>
 </head>
 <body>
-    <h1>Uzzal Bhowmik this is my name!</h1>
-    <p>hi I'm trying the Github for the first time and this is me trying to push something into the Github so lets hope for the best!</p>
+
+    <h2>Hi, I am exploring how to use git and how to use git branches.</h2>
+    <h3>I am editing the code inside the add-header branch and if this line is showing in the main branch code file then it is working properly!</h3>
+
 
     <img src="images/sundar pichai.jpg" alt="">
     <img id="snadella" src="images/satyanadella.jpg" alt="">
 
     <br>
-
-    <strong>this is a test file for testing . If by any accicent this file gets destroyed that wont be that much of a issue.</strong>
-
-    <br>
     
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus animi, qui accusamus corporis doloribus deleniti rerum nulla. Debitis sit ad animi voluptate velit quod. Neque quos deserunt beatae suscipit possimus tempora illum dicta aut repellendus vitae, tenetur optio dignissimos eos placeat, adipisci ab quo dolore architecto nobis. Pariatur a, ipsam aperiam vero dignissimos iusto saepe, distinctio quia maiores consequuntur eligendi commodi animi incidunt autem totam recusandae.</p>
 
+    <center><h1>GOOD-BYE!</h1></center>
 </body>
 </html>
