main header changed

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
 
-    <h2>Hi, I am exploring how to use git and how to use git branches.</h2>
+    <h2>Hello my name in shamol, I am exploring how to use git and how to use git branches.</h2>
     <h3>I am editing the code inside the add-header branch and if this line is showing in the main branch code file then it is working properly!</h3>
 
 
